# moonshine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  config.h.in
apps/: CMakeLists.txt
apps/generate_patch_header/: CMakeLists.txt  generate_patch_header.lua
apps/implant_patcher/: CMakeLists.txt  main.cpp
apps/lib2header/: CMakeLists.txt  lib2header.lua
cmake/: DownloadCatch2.cmake  DownloadCxxopts.cmake  DownloadFmt.cmake  DownloadLibHydrogen.cmake  DownloadLuaBinaryheap.cmake  DownloadLuaCopas.cmake  DownloadLuaCoxpcall.cmake  DownloadLuaLuv.cmake  DownloadLuaSec.cmake  DownloadLuaSocket.cmake  DownloadLuaTimerwheel.cmake  DownloadMonocypherCpp.cmake  DownloadNlohmannJson.cmake  DownloadOatpp.cmake  DownloadOatppOpenssl.cmake  DownloadOatppSqlite.cmake  DownloadOatppSwagger.cmake  DownloadOatppWebsocket.cmake  DownloadOpenSSL.cmake  DownloadSignals.cmake  DownloadSimpleWebServer.cmake  DownloadSpdlog.cmake  DownloadStandaloneAsio.cmake  DownloadYas.cmake  ObjectsFirstClass.cmake  mingw-w64-x86_64.cmake
examples/: CMakeLists.txt  api.ipynb
examples/client-sdk/: generate.cmd  generate.sh
examples/client-sdk/python/: .gitlab-ci.yml  .travis.yml  README.md  setup.py  tox.ini
examples/client-sdk/python/.openapi-generator/: FILES
examples/client-sdk/python/docs/: ArchitectureString.md  Argument.md  ArtifactTypeString.md  Command.md  DefaultApi.md  Implant.md  ImplantsPage.md  Job.md  JobStatusInt32.md  JobSuccessInt32.md  JobsPage.md  Listener.md  ListenersPage.md  OperatingSystemString.md  Service.md  ServicesPage.md  Status.md  Task.md  TaskStatusInt32.md  TaskSuccessInt32.md  TasksPage.md
examples/client-sdk/python/moonshine/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
examples/client-sdk/python/moonshine/api/: __init__.py  default_api.py
examples/client-sdk/python/moonshine/apis/: __init__.py
examples/client-sdk/python/moonshine/model/: architecture_string.py  argument.py  artifact_type_string.py  command.py  implant.py  implants_page.py  job.py  job_status_int32.py  job_success_int32.py  jobs_page.py  listener.py  listeners_page.py  operating_system_string.py  service.py  services_page.py  status.py  task.py  task_status_int32.py  task_success_int32.py  tasks_page.py
examples/client-sdk/python/moonshine/models/: __init__.py
examples/client-sdk/python/test/: test_architecture_string.py  test_argument.py  test_artifact_type_string.py  test_command.py  test_default_api.py  test_implant.py  test_implants_page.py  test_job.py  test_job_status_int32.py  test_job_success_int32.py  test_jobs_page.py  test_listener.py  test_listeners_page.py  test_operating_system_string.py  test_service.py  test_services_page.py  test_status.py  test_task.py  test_task_status_int32.py  test_task_success_int32.py  test_tasks_page.py
examples/scripts/http/: httpd.lua  implant.lua  listener.lua
examples/win32mod/: CMakeLists.txt  win32mod.c
implant/: CMakeLists.txt
implant/core/: CMakeLists.txt  config.h  dispatcher.cpp  dispatcher.h  implant.cpp  implant.h  messages.cpp  messages.h  modules.h  state.cpp  state.h
implant/core/handlers/: hello.cpp  hello.h  job.cpp  job.h  task.cpp  task.h
implant/core/workers/: job.cpp  job.h
implant/executable/: CMakeLists.txt  main.cpp  patch.h
modules/: CMakeLists.txt
modules/binaryheap/: CMakeLists.txt
modules/copas/: CMakeLists.txt
modules/coxpcall/: CMakeLists.txt
modules/luasec/: CMakeLists.txt
modules/luasocket/: CMakeLists.txt
modules/luv/: CMakeLists.txt
modules/struct/: CMakeLists.txt
modules/timerwheel/: CMakeLists.txt
server/: CMakeLists.txt
server/core/: CMakeLists.txt  server.cpp  server.h
server/core/api/: components.h  database_component.h  error_handler.cpp  error_handler.h  server.h  swagger_component.h
server/core/controllers/: artifact.h  implant.h  job.h  landing.h  listener.h  service.h  task.h  ws.h
server/core/db/: client.h
server/core/dto/: argument.h  artifact.h  command.h  config.h  implant.h  job.h  library.h  listener.h  page.h  service.h  status.h  task.h
server/core/handlers/: dispatcher.cpp  dispatcher.h  hello.cpp  hello.h  job.cpp  job.h  task.cpp  task.h
server/core/lua/: implant.cpp  implant.h  listener.cpp  listener.h  modules.cpp  modules.h  service.cpp  service.h
server/core/services/: argument.cpp  argument.h  config.cpp  config.h  implant.cpp  implant.h  job.cpp  job.h  library.cpp  library.h  listener.cpp  listener.h  service.cpp  service.h  task.cpp  task.h  ws.cpp  ws.h
server/executable/: CMakeLists.txt  main.cpp  x509.cpp  x509.h
server/resources/migration/: 001_init.sql
server/resources/swagger/: swagger-ui-bundle.js  swagger-ui-es-bundle.js  swagger-ui.css.map
shared/: CMakeLists.txt  encryption.cpp  encryption.h  message.cpp  message.h  metadata.cpp  metadata.h  worker.cpp  worker.h
shared/util/: concurrency.hpp  debug.hpp  filesystem.hpp  platform.hpp  string.hpp  zip.hpp
tests/: CMakeLists.txt
tests/implant/: CMakeLists.txt  main.cpp  scripts.h
tests/server/: CMakeLists.txt  main.cpp  scripts.h
tests/shared/: CMakeLists.txt  main.cpp  tservice.h
